# tfenv-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  release.yml.new
src/: installer.rs  lib.rs  main.rs  version.rs
tests/: installer_tests.rs
