[package]
name = "tfenv-rs"
version = "0.1.0"
authors = ["tfutils"]
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
dirs = "4.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
tempfile = "3.5"
hex = "0.4"
scraper = "0.14"
regex = "1.9"
semver = "1.0"
which = "4.4"

[profile.dev]
opt-level = 1
